; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_bytes.c_buf_bytes_seek.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_bytes.c_buf_bytes_seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf_bytes_priv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @buf_bytes_seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_bytes_seek(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.buf_bytes_priv*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call %struct.buf_bytes_priv* @get_priv_bytes(i32* %9)
  store %struct.buf_bytes_priv* %10, %struct.buf_bytes_priv** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = sub nsw i32 0, %14
  %16 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %8, align 8
  %17 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp sgt i32 %15, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store i32 -1, i32* %4, align 4
  br label %47

21:                                               ; preds = %13, %3
  %22 = load i32, i32* %7, align 4
  switch i32 %22, label %41 [
    i32 130, label %23
    i32 128, label %29
    i32 129, label %33
  ]

23:                                               ; preds = %21
  %24 = load i32, i32* %6, align 4
  %25 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %8, align 8
  %26 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = add nsw i32 %27, %24
  store i32 %28, i32* %26, align 4
  br label %43

29:                                               ; preds = %21
  %30 = load i32, i32* %6, align 4
  %31 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %8, align 8
  %32 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  br label %43

33:                                               ; preds = %21
  %34 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %8, align 8
  %35 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %36, %37
  %39 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %8, align 8
  %40 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 4
  br label %43

41:                                               ; preds = %21
  %42 = call i32 (...) @r_warn_if_reached()
  store i32 -1, i32* %4, align 4
  br label %47

43:                                               ; preds = %33, %29, %23
  %44 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %8, align 8
  %45 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %43, %41, %20
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local %struct.buf_bytes_priv* @get_priv_bytes(i32*) #1

declare dso_local i32 @r_warn_if_reached(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
